--- a/airship-treasuremap/global/kustomizeconfig/PeglegEndpointCatalogue.yaml
+++ b/airship-treasuremap/global/kustomizeconfig/PeglegEndpointCatalogue.yaml
@@ -1,5 +1,263 @@
 varReference:
+
+- kind: PeglegEndpointCatalogue
+  path: spec/ceph/ceph_object_store/host_fqdn_override/admin/host
+- kind: PeglegEndpointCatalogue
+  path: spec/ceph/ceph_object_store/host_fqdn_override/default
+- kind: PeglegEndpointCatalogue
+  path: spec/ceph/ceph_object_store/host_fqdn_override/public/host
+- kind: PeglegEndpointCatalogue
+  path: spec/ceph/ceph_object_store/host_fqdn_override/public/tls/ca
+- kind: PeglegEndpointCatalogue
+  path: spec/ceph/ceph_object_store/host_fqdn_override/public/tls/crt
+- kind: PeglegEndpointCatalogue
+  path: spec/ceph/ceph_object_store/host_fqdn_override/public/tls/key
+- kind: PeglegEndpointCatalogue
+  path: spec/ceph/object_store/host_fqdn_override/admin/host
+- kind: PeglegEndpointCatalogue
+  path: spec/ceph/object_store/host_fqdn_override/default
+- kind: PeglegEndpointCatalogue
+  path: spec/ceph/object_store/host_fqdn_override/public/host
+- kind: PeglegEndpointCatalogue
+  path: spec/ceph/object_store/host_fqdn_override/public/tls/ca
+- kind: PeglegEndpointCatalogue
+  path: spec/ceph/object_store/host_fqdn_override/public/tls/crt
+- kind: PeglegEndpointCatalogue
+  path: spec/ceph/object_store/host_fqdn_override/public/tls/key
+
 - kind: PeglegEndpointCatalogue
   path: spec/osh_infra/ldap/path/default
+- kind: PeglegEndpointCatalogue
+  path: spec/osh_infra/ldap/host_fqdn_override/public/host
+- kind: PeglegEndpointCatalogue
+  path: spec/osh_infra/grafana/host_fqdn_override/admin/host
+- kind: PeglegEndpointCatalogue
+  path: spec/osh_infra/grafana/host_fqdn_override/default
+- kind: PeglegEndpointCatalogue
+  path: spec/osh_infra/grafana/host_fqdn_override/public/host
+- kind: PeglegEndpointCatalogue
+  path: spec/osh_infra/grafana/host_fqdn_override/public/tls/ca
+- kind: PeglegEndpointCatalogue
+  path: spec/osh_infra/grafana/host_fqdn_override/public/tls/crt
+- kind: PeglegEndpointCatalogue
+  path: spec/osh_infra/grafana/host_fqdn_override/public/tls/key
+- kind: PeglegEndpointCatalogue
+  path: spec/osh_infra/kibana/host_fqdn_override/admin/host
+- kind: PeglegEndpointCatalogue
+  path: spec/osh_infra/kibana/host_fqdn_override/default
+- kind: PeglegEndpointCatalogue
+  path: spec/osh_infra/kibana/host_fqdn_override/public/host
+- kind: PeglegEndpointCatalogue
+  path: spec/osh_infra/kibana/host_fqdn_override/public/tls/ca
+- kind: PeglegEndpointCatalogue
+  path: spec/osh_infra/kibana/host_fqdn_override/public/tls/crt
+- kind: PeglegEndpointCatalogue
+  path: spec/osh_infra/kibana/host_fqdn_override/public/tls/key
+- kind: PeglegEndpointCatalogue
+  path: spec/osh_infra/nagios/host_fqdn_override/admin/host
+- kind: PeglegEndpointCatalogue
+  path: spec/osh_infra/nagios/host_fqdn_override/default
+- kind: PeglegEndpointCatalogue
+  path: spec/osh_infra/nagios/host_fqdn_override/public/host
+- kind: PeglegEndpointCatalogue
+  path: spec/osh_infra/nagios/host_fqdn_override/public/tls/ca
+- kind: PeglegEndpointCatalogue
+  path: spec/osh_infra/nagios/host_fqdn_override/public/tls/crt
+- kind: PeglegEndpointCatalogue
+  path: spec/osh_infra/nagios/host_fqdn_override/public/tls/key
+
+- kind: PeglegEndpointCatalogue
+  path: spec/ucp/identity/host_fqdn_override/admin/host
+- kind: PeglegEndpointCatalogue
+  path: spec/ucp/identity/host_fqdn_override/default
+- kind: PeglegEndpointCatalogue
+  path: spec/ucp/identity/host_fqdn_override/public/host
+- kind: PeglegEndpointCatalogue
+  path: spec/ucp/identity/host_fqdn_override/public/tls/ca
+- kind: PeglegEndpointCatalogue
+  path: spec/ucp/identity/host_fqdn_override/public/tls/crt
+- kind: PeglegEndpointCatalogue
+  path: spec/ucp/identity/host_fqdn_override/public/tls/key
+- kind: PeglegEndpointCatalogue
+  path: spec/ucp/shipyard/host_fqdn_override/admin/host
+- kind: PeglegEndpointCatalogue
+  path: spec/ucp/shipyard/host_fqdn_override/default
+- kind: PeglegEndpointCatalogue
+  path: spec/ucp/shipyard/host_fqdn_override/public/host
+- kind: PeglegEndpointCatalogue
+  path: spec/ucp/shipyard/host_fqdn_override/public/tls/ca
+- kind: PeglegEndpointCatalogue
+  path: spec/ucp/shipyard/host_fqdn_override/public/tls/crt
+- kind: PeglegEndpointCatalogue
+  path: spec/ucp/shipyard/host_fqdn_override/public/tls/key
+
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/ceph_object_store/host_fqdn_override/admin/host
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/ceph_object_store/host_fqdn_override/default
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/ceph_object_store/host_fqdn_override/public/host
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/ceph_object_store/host_fqdn_override/public/tls/ca
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/ceph_object_store/host_fqdn_override/public/tls/crt
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/ceph_object_store/host_fqdn_override/public/tls/key
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/cloudformation/host_fqdn_override/admin/host
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/cloudformation/host_fqdn_override/default
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/cloudformation/host_fqdn_override/public/host
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/cloudformation/host_fqdn_override/public/tls/ca
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/cloudformation/host_fqdn_override/public/tls/crt
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/cloudformation/host_fqdn_override/public/tls/key
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/compute/host_fqdn_override/admin/host
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/compute/host_fqdn_override/default
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/compute/host_fqdn_override/public/host
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/compute/host_fqdn_override/public/tls/ca
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/compute/host_fqdn_override/public/tls/crt
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/compute/host_fqdn_override/public/tls/key
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/compute_novnc_proxy/host_fqdn_override/admin/host
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/compute_novnc_proxy/host_fqdn_override/default
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/compute_novnc_proxy/host_fqdn_override/public/host
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/compute_novnc_proxy/host_fqdn_override/public/tls/ca
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/compute_novnc_proxy/host_fqdn_override/public/tls/crt
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/compute_novnc_proxy/host_fqdn_override/public/tls/key
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/dashboard/host_fqdn_override/admin/host
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/dashboard/host_fqdn_override/default
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/dashboard/host_fqdn_override/public/host
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/dashboard/host_fqdn_override/public/tls/ca
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/dashboard/host_fqdn_override/public/tls/crt
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/dashboard/host_fqdn_override/public/tls/key
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/identity/host_fqdn_override/admin/host
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/identity/host_fqdn_override/default
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/identity/host_fqdn_override/public/host
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/identity/host_fqdn_override/public/tls/ca
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/identity/host_fqdn_override/public/tls/crt
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/identity/host_fqdn_override/public/tls/key
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/image/host_fqdn_override/admin/host
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/image/host_fqdn_override/default
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/image/host_fqdn_override/public/host
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/image/host_fqdn_override/public/tls/ca
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/image/host_fqdn_override/public/tls/crt
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/image/host_fqdn_override/public/tls/key
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/network/host_fqdn_override/admin/host
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/network/host_fqdn_override/default
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/network/host_fqdn_override/public/host
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/network/host_fqdn_override/public/tls/ca
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/network/host_fqdn_override/public/tls/crt
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/network/host_fqdn_override/public/tls/key
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/object_store/host_fqdn_override/admin/host
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/object_store/host_fqdn_override/default
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/object_store/host_fqdn_override/public/host
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/object_store/host_fqdn_override/public/tls/ca
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/object_store/host_fqdn_override/public/tls/crt
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/object_store/host_fqdn_override/public/tls/key
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/orchestration/host_fqdn_override/admin/host
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/orchestration/host_fqdn_override/default
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/orchestration/host_fqdn_override/public/host
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/orchestration/host_fqdn_override/public/tls/ca
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/orchestration/host_fqdn_override/public/tls/crt
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/orchestration/host_fqdn_override/public/tls/key
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/placement/host_fqdn_override/admin/host
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/placement/host_fqdn_override/default
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/placement/host_fqdn_override/public/host
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/placement/host_fqdn_override/public/tls/ca
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/placement/host_fqdn_override/public/tls/crt
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/placement/host_fqdn_override/public/tls/key
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/volume/host_fqdn_override/admin/host
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/volume/host_fqdn_override/default
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/volume/host_fqdn_override/public/host
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/volume/host_fqdn_override/public/tls/ca
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/volume/host_fqdn_override/public/tls/crt
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/volume/host_fqdn_override/public/tls/key
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/volumev2/host_fqdn_override/admin/host
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/volumev2/host_fqdn_override/default
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/volumev2/host_fqdn_override/public/host
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/volumev2/host_fqdn_override/public/tls/ca
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/volumev2/host_fqdn_override/public/tls/crt
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/volumev2/host_fqdn_override/public/tls/key
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/volumev3/host_fqdn_override/admin/host
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/volumev3/host_fqdn_override/default
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/volumev3/host_fqdn_override/public/host
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/volumev3/host_fqdn_override/public/tls/ca
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/volumev3/host_fqdn_override/public/tls/crt
+- kind: PeglegEndpointCatalogue
+  path: spec/osh/volumev3/host_fqdn_override/public/tls/key
 
 inlineReference:
