--- a/airship-treasuremap/site/airship-seaworthy/software/charts/osh-infra/osh-infra-logging/elasticsearch.yaml
+++ b/airship-treasuremap/site/airship-seaworthy/software/charts/osh-infra/osh-infra-logging/elasticsearch.yaml
@@ -9,6 +9,6 @@ metadata:
       path: .
     layer: site
     parentSelector:
-      hosttype: elasticsearch-global
+      hosttype: elasticsearch
   name: elasticsearch
 spec: {}
