--- a/airship-treasuremap/site/airship-seaworthy/software/charts/osh-infra/osh-infra-logging/fluent-logging.yaml
+++ b/airship-treasuremap/site/airship-seaworthy/software/charts/osh-infra/osh-infra-logging/fluent-logging.yaml
@@ -9,6 +9,6 @@ metadata:
       path: .
     layer: site
     parentSelector:
-      hosttype: fluent-logging-global
+      hosttype: fluent-logging
   name: fluent-logging
 spec: {}
