--- a/airship-treasuremap/site/airskiff/secrets/passphrases/ipmi_admin_password.yaml
+++ b/airship-treasuremap/site/airskiff/secrets/passphrases/ipmi_admin_password.yaml
@@ -7,6 +7,6 @@ metadata:
     abstract: false
     layer: site
   labels:
-    name: ipmi-admin-password-site
+    name: ipmi-admin-password
 spec: password123
 ...
