--- a/airship-treasuremap/site/airskiff/software/charts/osh-infra/osh-infra-logging/elasticsearch.yaml
+++ b/airship-treasuremap/site/airskiff/software/charts/osh-infra/osh-infra-logging/elasticsearch.yaml
@@ -9,7 +9,7 @@ metadata:
     abstract: false
     layer: site
     parentSelector:
-      hosttype: elasticsearch-global
+      hosttype: elasticsearch
     actions:
       - method: merge
         path: .
