--- a/airship-treasuremap/site/airsloop/profiles/host/compute.yaml
+++ b/airship-treasuremap/site/airsloop/profiles/host/compute.yaml
@@ -13,7 +13,7 @@ metadata:
       path: .
     layer: site
     parentSelector:
-      hosttype: dp-global
+      hosttype: dp
   name: compute-r720xd
 spec:
   hardware_profile: dell_r720xd
