--- a/airship-treasuremap/type/sloop/charts/osh-infra/elasticsearch.yaml
+++ b/airship-treasuremap/type/sloop/charts/osh-infra/elasticsearch.yaml
@@ -9,7 +9,7 @@ metadata:
       path: .
     layer: type
     parentSelector:
-      hosttype: elasticsearch-global
+      hosttype: elasticsearch
   name: elasticsearch
 spec:
   values:
