--- a/airship-treasuremap/type/sloop/charts/osh-infra/fluent-logging.yaml
+++ b/airship-treasuremap/type/sloop/charts/osh-infra/fluent-logging.yaml
@@ -9,7 +9,7 @@ metadata:
       path: .
     layer: type
     parentSelector:
-      hosttype: fluent-logging-global
+      hosttype: fluent-logging
   name: fluent-logging
 spec:
   values:
