--- a/airship-treasuremap/site/airship-seaworthy/profiles/host/dp_r720.yaml
+++ b/airship-treasuremap/site/airship-seaworthy/profiles/host/dp_r720.yaml
@@ -13,7 +13,7 @@ metadata:
       path: .
     layer: site
     parentSelector:
-      hosttype: dp-global
+      hosttype: dp
   name: dp-r720
 spec:
   hardware_profile: dell_r720
