--- a/airship-treasuremap/site/airship-seaworthy/software/charts/kubernetes/etcd/etcd.yaml
+++ b/airship-treasuremap/site/airship-seaworthy/software/charts/kubernetes/etcd/etcd.yaml
@@ -37,7 +37,7 @@ spec:
           key: $(DeckhandCertificateKey.kubernetes-etcd-cab23-r720-13.spec)
         peer:
           cert: $(DeckhandCertificate.kubernetes-etcd-cab23-r720-13-peer.spec)
-          key: $(DeckhandCertificateKey.kubernetes-etcd-cab23-r720-13-peer.spec$)
+          key: $(DeckhandCertificateKey.kubernetes-etcd-cab23-r720-13-peer.spec)
     - name: $(PeglegCommonAddresses.common-addresses.spec.masters._2_.hostname)
       tls:
         client:
@@ -45,4 +45,4 @@ spec:
           key: $(DeckhandCertificateKey.kubernetes-etcd-cab23-r720-14.spec)
         peer:
           cert: $(DeckhandCertificate.kubernetes-etcd-cab23-r720-14-peer.spec)
-          key: $(DeckhandCertificateKey.kubernetes-etcd-cab23-r720-14-peer.spec$)
+          key: $(DeckhandCertificateKey.kubernetes-etcd-cab23-r720-14-peer.spec)
