--- a/airship-treasuremap/site/airsloop/secrets/passphrases/ipmi_admin_password.yaml
+++ b/airship-treasuremap/site/airsloop/secrets/passphrases/ipmi_admin_password.yaml
@@ -3,7 +3,7 @@ apiVersion: deckhand.airshipit.org/v1alpha1
 kind: DeckhandPassphrase
 metadata:
   labels:
-    name: ipmi-admin-password-site
+    name: ipmi-admin-password
   layeringDefinition:
     abstract: false
     layer: site
